recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: not found: value lenght
 if (steps==1){current(steps);avance(lenght)}
                                     ^Tree:6: error: not found: value trees
       trees(steps-1,length*shrink,angle,shrink);
       ^Tree:9: error: not found: value trees
       trees(steps-1,length*shrink,angle,shrink);
       ^