recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)  {
 if (steps==1){current(steps);avance(lenght)}
 else {current(steps);
   		 avance(length);
       droite(angle);
       trees(steps-1,length*shrink,angle,shrink);
       gauche(angle);
       gauche(angle);
       trees(steps-1,length*shrink,angle,shrink);
       recule(length)
      }
}